tools/tests/errors/surf_parse_07.ki
# PARSER: assignment to a binary expression, not a valid assignment target
var a = 1
a + 1 = 5